# plague-atlas

./: .gitignore  README.md  pyproject.toml
plague/: __init__.py  __main__.py  cli.py  detect.py  food.py
plague/scan/: __init__.py
plague_atlas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_plague.py
